--- a/q_learning_shortest_path.ipynb
+++ b/q_learning_shortest_path.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "q-learning_shortest_path.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN4zVXSVEWgxWTIaX1pq1Yy",
+      "authorship_tag": "ABX9TyMrOkWK3Sqj2CFuJeP+eIE9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,7 +68,7 @@
         "        # randomly choose the one of the reachable states as the next state\n",
         "        next_state = np.random.choice(playable_actions)\n",
         "\n",
-        "        # Bellman's Equation (finding temporal difference)\n",
+        "        # Bellman's Equation to update Q-table\n",
         "        q_table[current_state, next_state] += alpha * (reward_env[current_state, next_state] \\\n",
         "                                           + gamma * q_table[next_state, np.argmax(q_table[next_state,])] \\\n",
         "                                           - q_table[current_state, next_state])\n",
@@ -109,7 +109,7 @@
       "metadata": {
         "id": "jButeYgaPXhH"
       },
-      "execution_count": 52,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -148,7 +148,7 @@
       "metadata": {
         "id": "4mUnLuniKVMf"
       },
-      "execution_count": 37,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -185,9 +185,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ponQu57ZJ400",
-        "outputId": "880acce8-08fe-460a-dbf9-e3bdce9b71ea"
+        "outputId": "8f79efdb-9ed8-4f86-8c75-8362d120ee33"
       },
-      "execution_count": 49,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,37 +213,15 @@
         "# Train\n",
         "\n",
         "# Q table will be printed when training iteration = check_point\n",
-        "check_point = 1000\n",
+        "check_point = 0\n",
         "\n",
         "q_table = train(alpha, gamma, iterations, location_to_state, state_to_location, actions, reward_env, check_point)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Fc2z6TEuRK8J",
-        "outputId": "ef43966a-8f16-4912-e3b2-e06c6f8c0763"
+        "id": "Fc2z6TEuRK8J"
       },
-      "execution_count": 50,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Q-table at iteration 1000:\n",
-            " [[   0 1264 1686    0    0    0    0    0    0]\n",
-            " [1265    0    0 1685    0    0    0    0    0]\n",
-            " [1265    0    0    0    0    0 2247    0    0]\n",
-            " [   0    0    0    0  948 2247    0    0    0]\n",
-            " [   0 1264    0    0    0    0    0    0    0]\n",
-            " [   0    0    0 1685    0    0    0    0 2996]\n",
-            " [   0    0 1686    0    0    0    0    0 2996]\n",
-            " [   0    0    0    0    0    0    0    0    0]\n",
-            " [   0    0    0    0    0 2247 2244    0 3994]]\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": 57,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -258,9 +236,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E0Tad_pyRc89",
-        "outputId": "3faeffd9-8be7-4cda-d13e-599e3c1c6763"
+        "outputId": "4d9ea18d-757f-4e82-fdb3-2cbac3798941"
       },
-      "execution_count": 51,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
